cleanup. deprecated the the dev guide docx. Readme.md will now serve the purpose.